<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_label">Downloads</string>
    <string name="download_title_sorted_by_date">Downloads - Sorted by date</string>
    <string name="download_title_sorted_by_size">Downloads - Sorted by size</string>
    <string name="no_downloads">No downloads.</string>
    <string name="missing_title">&lt;Unknown></string>
    <string name="button_sort_by_size">Sort by size</string>
    <string name="button_sort_by_date">Sort by date</string>
    <string name="download_queued">Queued</string>
    <string name="download_running">In progress</string>
    <string name="download_success">Complete</string>
    <string name="download_error">Unsuccessful</string>
    <string name="dialog_title_not_available">"Couldn't download"</string>
    <string name="dialog_failed_body">Do you want to retry downloading the file later or delete it from the queue?</string>
    <string name="dialog_title_queued_body">File in queue</string>
    <string name="dialog_queued_body">"This file is queued for future download so isn't available yet."</string>
    <string name="dialog_file_missing_body">"Can't find the downloaded file."</string>
    <string name="dialog_insufficient_space_on_external">"Can't finish download. There isn't enough space on external storage."</string>
    <string name="dialog_insufficient_space_on_cache">"Can't finish download. There isn't enough space on internal download storage."</string>
    <string name="dialog_cannot_resume">"Download was interrupted and can't be resumed."</string>
    <string name="dialog_file_already_exists">"Can't download. The destination file already exists."</string>
    <string name="dialog_media_not_found">"Can't download. The external media isn't available."</string>
    <string name="download_no_application_title">"Can't open file"</string>
    <string name="remove_download">Remove</string>
    <string name="delete_download">Delete</string>
    <string name="keep_queued_download">Keep</string>
    <string name="cancel_running_download">Cancel</string>
    <string name="retry_download">Retry</string>
    <string name="deselect_all">Deselect all</string>
    <string name="select_all">Select all</string>
    <string name="selected_count">Selected %1$d out of %2$d</string>
    <string name="download_share_dialog">Share via</string>
    <string name="share_failed_with_download_error">There is a file download failed, can not continue to share.</string>
    <string name="dd_completed_text">This is OMA download, please click to continue</string>
    <string name="omadownload_title">OMA DOWNLOAD PROMPT</string>
    <string name="dd_title_name">Name</string>
    <string name="dd_title_type">Type</string>
    <string name="dd_title_size">Size</string>
    <string name="dd_title_description">Description</string>
    <string name="dd_title_vendor">Vendor</string>
    <string name="dd_button_ok">Confirm</string>
    <string name="dd_button_cancel">Cancel</string>
    <string name="oma_error_objurl">obj url error</string>
    <string name="oma_error_version">version error</string>
    <string name="oma_error_type">unkown type</string>
    <string name="oma_error_size">unkown size</string>
    <string name="omafinish_title_nexturl">Next url</string>
    <string name="omafinish_title_filelocation">Object file location</string>
    <string name="omafinish_button_gotonexturl">Goto url</string>
    <string name="omafinish_button_openfile">open file</string>
    <string name="ok">ok</string>
</resources>
